# service-migration

./: LICENSE.MD  pyproject.toml
input/: Scenario_36.json
input/save/: Scenario_15.json  Scenario_20.json  Scenario_25.json  Scenario_30.json  Scenario_40.json  Scenario_50.json  Scenario_60.json
output/: Scenario_36.csv  epochs.csv
serviceMigration/: PowerConsumptionModel.py  RequestGenerator.py  Scenario_15.csv  Scenario_20.csv  Scenario_25.csv  Scenario_30.csv  Scenario_40.csv  Scenario_50.csv  Scenario_60.csv  ServiceMigrator.py  __init__.py  here.csv  service_migration.py
visualization/: cpu_usage.py  downlink_data_rate_generation.py  duration.py  energy_usage.py  microservice_migration.py  uplink_data_rate_generation.py
